--- a/Maintenance_Managment_App/CONTROLLER_APP/CONTROLLER_APP.csproj
+++ b/Maintenance_Managment_App/CONTROLLER_APP/CONTROLLER_APP.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ENTITIES_APP\ENTITIES_APP.csproj" />
+    <ProjectReference Include="..\DATABASE_APP\DATABASE_APP.csproj" />
   </ItemGroup>
 
 </Project>
